<resources>
    <string name="alert_password"><![CDATA[Password must contain at least one of these {0–9}, {A-Z}, {@#$%^&+=}, length >= 6]]></string>
    <string name="alert_email_is_invalid">Email is invalid</string>
    <string name="alert_invalid_login">Invalid Login or password</string>
    <string name="alert_password_mismatch">password mismatch</string>
    <string name="alert_invalid_phone">Invalid phone number</string>
    <string name="alert_phone_already_taken">Phone number has already been taken</string>
    <string name="alert_email_already_taken">Email has already been taken</string>
    <string name="alert_empty_fields">All fields must be filled</string>
    <string name="alert_already_user">Email is already registered. Please login with your email</string>
    <string name="alert_list_is_empty">List is empty</string>
    <string name="alert_contact_empty">No contacts found :(</string>
    <string name="alert_empty_requests">No requests found :(</string>
    <string name="alert_empty_followings">No followings :(</string>
    <string name="alert_empty_followers">No followers :(</string>
    <string name="alert_storage_permission_denied_permanently">Please enable Storage permission to access this feature</string>
    <string name="alert_camera_permission_denied_permanently">Please enable Camera permission to access this feature</string>
    <string name="alert_camera_permission_denied">Camera permission denied</string>
    <string name="alert_storage_permission_denied">Storage permission denied</string>
    <string name="alert_network_success">Network connection success</string>
    <string name="alert_network_failed">Network connection failed</string>
    <string name="alert_otp_not_verified">OTP not verified</string>
    <string name="alert_check_mail_for_otp">Check your email for otp password</string>
    <string name="alert_email_not_verified">Email not verified</string>
    <string name="alert_email_not_registered">Email not registered</string>
    <string name="alert_password_reset_success">Password changed successfully</string>
    <string name="alert_password_reset_failed">OTP password is not correct or password change is not successful</string>
    <string name="app_name">ContactListApp</string>
    <string name="app_version">version 1.2</string>
    <string name="address_caps">Address</string>
    <string name="address_small">address</string>
    <string name="back">Back</string>
    <string name="button">Button</string>
    <string name="company">Company</string>
    <string name="company_eg">ABC private limited</string>
    <string name="cancel">Cancel</string>
    <string name="city">City</string>
    <string name="contacts">Contacts</string>
    <string name="confirm_password">Confirm password</string>
    <string name="current_password">Current password</string>
    <string name="chooser">chooser</string>
    <string name="done">Done</string>
    <string name="email_eg">jhon@mail.com</string>
    <string name="email_caps">Email</string>
    <string name="email_for_otp">Add registered email ID to receive OTP</string>
    <string name="email_small">email</string>
    <string name="enter_the_received_otp">Enter the received OTP</string>
    <string name="edit">Edit</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="forgot_password">Forgot password</string>
    <string name="first_name_last_name">FirstName LastName</string>
    <string name="first_name">First name</string>
    <string name="follow_request_sent">Follow request sent</string>
    <string name="follow_request_already_sent">Follow request already sent</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="groups">Groups</string>
    <string name="jhon">Jhon</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="last_name">Last name</string>
    <string name="mallow_technology">Mallow Technology</string>
    <string name="new_password">New password</string>
    <string name="okay">Okay</string>
    <string name="ok">OK</string>
    <string name="otp">OTP</string>
    <string name="profile_pic">Profile pic</string>
    <string name="password">Password</string>
    <string name="password_small">password</string>
    <string name="phone_caps">Phone</string>
    <string name="phone_small">phone</string>
    <string name="postal_code">Postal code</string>
    <string name="phone_eg">e.g. 9876543201</string>
    <string name="reset_password">Reset password</string>
    <string name="request_success">Request success</string>
    <string name="request_failed">Request Failed!</string>
    <string name="save">Save</string>
    <string name="sign_up">Signup</string>
    <string name="smith">Smith</string>
    <string name="send_otp">Send OTP</string>
    <string name="street">Street</string>
    <string name="state">State</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="view_social_profile">View Social Profile</string>
    <string name="verification">Verification</string>
</resources>