<?xml version="1.0" encoding="utf-8"?><!--    https://app.zeplin.io/project/5d1c2e7d016b288ce3036231/screen/5d832382f6f828885baf7d45-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_root_otp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/paleGrey">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_otp"
        style="@style/DialogFragmentTitle"
        android:text="@string/verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sub_title_otp"
        style="@style/DialogFragmentSubTitle"
        android:text="@string/enter_the_received_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_otp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_otp"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/spacing_20"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title_otp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_otp"
            style="@style/DialogFragmentTextInput"
            android:hint="@string/otp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_cancel"
        style="@style/DialogFragmentButton"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/tv_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_otp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_ok"
        style="@style/DialogFragmentButton"
        android:text="@string/ok"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@+id/til_otp" />
</androidx.constraintlayout.widget.ConstraintLayout>